Thu May 31 12:43:57 2001  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkoptionmenu.c: Account for the fact that the border
	width is _outside_ the window. (Fixes #54585, bug found
        by Bastien Nocera.)

Wed May 30 15:56:30 2001  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtksettings.c (gtk_settings_get_property): Validate
	value from GDK settings against parameter spec.

	* gdk/x11/gdkevents-x11.c (gdk_setting_get): Add assignments
	to temporary values and use g_value_transform(), since
	thinking that GValue was going to be easy or efficient
	to use was, of course, a mistake.

        * gtk/gtksettings.c: Add cursor blink setting.
	
	* gdk/x11/gdkevents-x11.c: Add cursor blink X settings.

	* gtk/gtkentry.c: Add cursor blinking.

	* gtk/gtktextview.c (gtk_text_view_check_cursor_blink): Use
	cursor blink global settings.

	* gtk/gtkentry.c (gtk_entry_button_press): Add notification
	for :text_position in places where it is missing.

Tue May 29 18:17:11 2001  Owen Taylor  <otaylor@redhat.com>

	* autogen.sh (have_libtool): Fix GNU sedism (#55430)

Tue May 29 17:40:29 2001  Owen Taylor  <otaylor@redhat.com>

	* configure.in (GTK_DEP_CFLAGS): Use $PKG_CONFIG,
	not pkg-config. (#51032)

	* gdk/gdkproperty.h: Remove inappropriate G_GNUC_CONST
	(fixes #51952, James Henstridge)
	
2001-05-27  Alexander Larsson  <alla@lysator.liu.se>

	* gtk/gtkstock.h (GTK_STOCK_GO_UP):
	Rename to the more correct gtk-go-up.

	* gtk/stock-icons/stock_menu_sort_ascending.png:
	Added new file.
	
	* gtk/stock-icons/stock_menu_sort_descending.png:
	Changed to show descending instead of ascending.

	* gtk/gtkiconfactory.c:
	Added menu size icon to sort ascending.

	* gtk/stock-icons/Makefile.am:
	Added stock_menu_sort_ascending.png.
	
	* gtk/gtkseparatormenuitem.c:
	Use correct typenames.

Sun May 20 20:07:35 2001  Tim Janik  <timj@gtk.org>

	* gtk/gtksignal.[hc] (gtk_signal_connect_full): make hanlder id a
	gulong as in GSignal.
